--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
-INSTALLER_SCHEDULER_PASSWORD=change-me
+INSTALLER_SCHEDULER_PASSWORD=F1t1t
 DATABASE_FILENAME=installer_scheduler.db
+DATABASE_URL=postgresql://neondb_owner:npg_hxT0CFoNmir4@ep-sparkling-thunder-a7zh9u9a-pooler.ap-southeast-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
