--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
+    "@neondatabase/serverless": "^1.0.2",
     "better-sqlite3": "^11.7.0",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.32.0",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.8",
+    "drizzle-orm": "^0.45.1",
     "next": "^14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
