--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
     "@neondatabase/serverless": "^1.0.2",
+    "@vercel/blob": "^0.25.1",
     "better-sqlite3": "^11.7.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
