Add login page for password gate

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 INSTALLER_SCHEDULER_PASSWORD=change-me
 DATABASE_FILENAME=installer_scheduler.db
+SCHEDULER_PASSWORD=change-me
+BLOB_READ_WRITE_TOKEN=your-vercel-blob-token
