adding distance to job new API for location

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ INSTALLER_SCHEDULER_PASSWORD=change-me
 DATABASE_FILENAME=installer_scheduler.db
 SCHEDULER_PASSWORD=change-me
 BLOB_READ_WRITE_TOKEN=your-vercel-blob-token
+
+# OpenRouteService (ORS) driving distances/time
+# Never expose ORS_API_KEY to client code.
+ORS_API_KEY=
+# Optional base location for daily routes (defaults to Lakes Entrance)
+ORS_BASE_ADDRESS=655 Esplanade, Lakes Entrance VIC
+ORS_BASE_LAT=-37.8766
+ORS_BASE_LNG=147.9957
