--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
-    "@hello-pangea/dnd": "^16.5.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.1",
     "@neondatabase/serverless": "^1.0.2",
     "@vercel/blob": "^0.25.1",
     "better-sqlite3": "^11.7.0",
